fix table overflow on select persons

--- a/Svbase/Svbase/Content/Site.css
+++ b/Svbase/Svbase/Content/Site.css
@@ -94,9 +94,7 @@ li.dropdown {
 }
 
 .table-horizontal-scroll {
-    display: block;
     overflow-x: auto;
-    white-space: nowrap;
 }
 
 .white-color {
